# learning_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
src/learning_agent/: __init__.py  agent.py  api.py  auto_training.py  environment.py  gradio_ui.py  models.py  scenario_importer.py  scenario_manager.py  spaced_repetition.py  ui.py
src/learning_agent/static/: index.html
upload_examples/: englisch_vokabeln.json  geschichte_grundlagen.xml  mathe_grundlagen.csv
