[project]
name = "learning-agent"
version = "0.1.0"
description = "Personalisierter Lernassistent mit adaptiver Schwierigkeitsanpassung"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "lxml>=4.9.0",
    "python-multipart>=0.0.6",
]
